--- a/Group1_HW_Set1.Rmd
+++ b/Group1_HW_Set1.Rmd
@@ -10,7 +10,7 @@ output: word_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Question 1 (Vishal Arora)
+# Question HA 2.1 (Vishal Arora)
 ## Questions
 Use the help function to explore what the series gold, woolyrnq and gas
 represent.
@@ -64,7 +64,7 @@ seen from the graph above, which is 770.
 which.max(gold)
 ```
 
-# Question 2.3 (Vishal Arora)
+# Question HA 2.3 (Vishal Arora)
 ## Questions
 Download some monthly Australian retail data from the
 [book website](http://otexts.com/fpp2/extrafiles/tute1.csv). These represent
@@ -160,3 +160,148 @@ autoplotting.
 decmyts <-decompose(myts)
 autoplot(decmyts, type="multiplicative")
 ```
+
+# Question HA 6.2 (Avraham Adler)
+## Question
+The `plastics` data set consists of the monthly sales (in thousands) of product
+A for a plastics manufacturer for five years.
+
+ a. Plot the time series of sales of product A. Can you identify seasonal
+ fluctuations and/or a trend-cycle?
+ b. Use a classical multiplicative decomposition to calculate the trend-cycle
+ and seasonal indices.
+ c. Do the results support the graphical interpretation from part a?
+ d. Compute and plot the seasonally adjusted data.
+ e. Change one observation to be an outlier (e.g., add 500 to one observation),
+ and recompute the seasonally adjusted data. What is the effect of the outlier?
+ f. Does it make any difference if the outlier is near the end rather than in
+ the middle of the time series?
+ 
+## Answers
+### Part a
+```{r Q62a}
+autoplot(plastics)
+```
+
+The graphs shows clear seasonality. The winter months have low values, which
+climb in the spring and summer, and then fall during fall. There is also a
+long-term increasing secular trend in the sales figures. There is too little
+data to determine if this increasing trend is part of a larger cycle. The peak
+in the last year (the years are denoted 1--5 in the dataset) is relatively
+lower than prior peak increases have been, which may indicate the turning of
+a cycle. However, one to two more years of data would be necessary to make a
+specific determination.
+
+### Part b
+This data has monthly frequency, so \(m = 12\) and \(\hat{T}_n\) should be
+calculated as a 2x12-period moving average.
+```{r 62b_1}
+Tn <- ma(plastics, order = 12, centre = TRUE)
+```
+
+Classical multiplicative decomposition detrends by dividing out the MA component.
+```{r 62b_2}
+detrendPlastics <- plastics / Tn
+```
+
+Classical decomposition adjusts for seasonality by calculating \(\hat{S}_n\),
+the average value per cycle---here monthly---and then subtracting it for
+additive, or dividing it out for multiplicative, from the detrended series.
+```{r 62b_3}
+# Preallocate your data structures when you can: RInferno
+Sn <- double(12)
+# This can be vectorized using data.table or dplyr, but is short enough that
+# the simple for loop is easiest to understand and implement.
+for (i in seq_len(12)) {
+    Sn[i] <- mean(detrendPlastics[cycle(detrendPlastics) == i], na.rm = TRUE)
+}
+```
+
+The raw values need to be adjusted so that their sum equals \(m\), which is 12
+in this case.
+``` {r 62b_4}
+Sn <- 12 * Sn / sum(Sn)
+```
+
+The random component of the times series, \(\hat{R}_n\) is calculated in 
+classical multiplicative decomposition as the quotient of the raw values with
+the product of the trend-cycle and seasonal components.
+```{r 62b_5}
+Rn <- plastics / (Tn * Sn)
+```
+
+We can check these results by comparing them to the output of the `decompose`
+function from the `stats` package, which does all of this automatically.
+```{r 62b_6}
+DecomPlastics <- decompose(plastics, type = 'multiplicative')
+all.equal(DecomPlastics$trend, Tn)
+all.equal(DecomPlastics$figure, Sn)
+all.equal(DecomPlastics$random, Rn)
+```
+
+While graphical output will wait until part d, below are \(\hat{S}_n,
+\hat{T}_n\), and \(\hat{R}_n\).
+```{r 62b_7}
+Sn
+Tn
+```
+
+### Part c.
+As surmised above, there is unmistakeably clear seasonality shown in
+\(\hat{S}_n\). Moreover, there is also a clear increasing trend shown in
+\(\hat{T}_n\). Lastly, the trend element shows a peak around February \& March
+of year 5. This implies that instead of a pure upwards trend there may be a
+longer-term cycle. However, whether that is noise or signal requires more data.
+Regardless, the multiplicative decomposition in part b clearly **supports** the
+graphical interpretation of part a.
+
+### Part d.
+The results will be graphically displayed using `autoplot` from `ggplot2`.
+```{r Q62d_1}
+autoplot(DecomPlastics)
+```
+
+### Part e.
+```{r Q62e_1}
+plastics2 <- plastics
+plastics2[[26]] <- plastics2[[26]] + 500
+Tn2 <- ma(plastics2, order = 12, centre = TRUE)
+detrendPlastics2 <- plastics2 / Tn2
+Sn2 <- double(12)
+for (i in seq_len(12)) {
+    Sn2[i] <- mean(detrendPlastics2[cycle(detrendPlastics2) == i], na.rm = TRUE)
+}
+Sn2 <- 12 * Sn2 / sum(Sn2)
+plot(Sn, type = 'l')
+lines(Sn2, col = 'blue')
+autoplot(decompose(plastics2, type = 'multiplicative'))
+```
+
+As can be seen from the plots above, the adding of an outlier to February in the
+middle of the time series gives a "bump" to that period's entry in the
+seasonality index and has an effect on the moving average so long as it is
+within the window. However, the overall shape and scale of the decompositions
+are very similar, indicating some level of robustness to a one-time outlier
+
+### Part f.
+```{r Q62f_1}
+plastics3 <- plastics
+plastics3[[2]] <- plastics2[[2]] + 500
+Tn3 <- ma(plastics3, order = 12, centre = TRUE)
+detrendPlastics3 <- plastics3 / Tn3
+Sn3 <- double(12)
+for (i in seq_len(12)) {
+    Sn3[i] <- mean(detrendPlastics3[cycle(detrendPlastics3) == i], na.rm = TRUE)
+}
+Sn3 <- 12 * Sn3 / sum(Sn3)
+plot(Sn, type = 'l')
+lines(Sn2, col = 'blue')
+lines(Sn3, col = 'purple')
+autoplot(decompose(plastics3, type = 'multiplicative'))
+```
+
+Here, the outlier was added to the first February. In this case it has almost
+no effect at all, as that is outside the acceptable window for a 2x12 moving
+average. In this case, interestingly, one of the known shortcomings of
+classical decomposition---its inability to process the ends of the time
+series---here becomes valuable!
