Good habit to stick to ~80char margin where possible.

--- a/Group1_HW_Set1.Rmd
+++ b/Group1_HW_Set1.Rmd
@@ -39,11 +39,14 @@ help("gas")
 
 According to the help function, the datasets are described as so:
 
-gold - This dataset represents the daily morning gold prices in US dollars from January 1st, 1985 to March 31st, 1989.
+gold - This dataset represents the daily morning gold prices in US dollars from
+January 1st, 1985 to March 31st, 1989.
 
-woolyrnq - This dataset represents the quarterly production of woollen yarn in Australia in tons from March 1965 to September 1994.
+woolyrnq - This dataset represents the quarterly production of woollen yarn in
+Australia in tons from March 1965 to September 1994.
 
-gas - This dataset represents the Australian monthly gas prodcution from 1956 to 1995.
+gas - This dataset represents the Australian monthly gas prodcution from 1956 to
+1995.
 
 ### Part a
 Using the `autoplot` function can give us a graphic disply of `ts` datasets.
@@ -68,7 +71,11 @@ frequency(gas)
 
 ### Part c
 
-Using the `which.max()` function gives us the index of the outlier with maximum value. It is important to note that the `which.max()` function does not return the actual max value, but the index in the vector where the max value is located. After plugging in the `which.max()` index value into the time series vector, we get the true maximum value, which is 593.7.
+Using the `which.max()` function gives us the index of the outlier with maximum
+value. It is important to note that the `which.max()` function does not return
+the actual max value, but the index in the vector where the max value is
+located. After plugging in the `which.max()` index value into the time series
+vector, we get the true maximum value, which is 593.7.
 
 ```{r Q1whichmax}
 which.max(gold)
