--- a/Group1_HW_Set1.Rmd
+++ b/Group1_HW_Set1.Rmd
@@ -321,3 +321,190 @@ no effect at all, as that is outside the acceptable window for a 2x12 moving
 average. In this case, interestingly, one of the known shortcomings of
 classical decomposition---its inability to process the ends of the time
 series---here becomes valuable!
+
+# Question HA 8.2
+## Question
+
+A classic example of a non-stationary series is the daily closing IBM stock price series (data set ibmclose). Use R to plot the daily closing prices for IBM stock and the ACF and PACF. Explain how each plot shows that the series is non-stationary and should be differenced.
+
+```{r}
+ibm <- ibmclose
+autoplot(ibm)
+```
+
+The timeseries appears to have some trend component, which would make the data non-stationary. Taking either the first or second difference should remove this trend and make the data stationary.
+
+```{r}
+ggAcf(ibm)
+```
+
+Here we see an autocorrelation plot that agrees with our above assumptions; the decaying values are a clear sign of trend, and every possible lag has a significant autocorrelation, indicating non-stationary data.
+
+```{r}
+ggPacf(ibm)
+```
+
+All of the autocorrelations are explainable by the first lag, the other correlations being significant are a product of this. Again, this correlation indicates non-stationary data which can likely be fixed by a first difference.
+
+# Question HA 8.6
+## Question
+
+Use R to simulate and plot some data from simple ARIMA models.
+
+### Part A
+Use the following R code to generate data from an AR(1) model with  ϕ1 = 0.6 and σ2 = 1. The process starts with y1 = 0.
+
+```{r}
+y <- ts(numeric(100))
+e <- rnorm(100)
+for(i in 2:100)
+  y[i] <- 0.6*y[i-1] + e[i]
+```
+
+### Part B
+Produce a time plot for the series. How does the plot change as you change ϕ1?
+
+```{r}
+for(i in c(-0.8, -0.6, -0.4, -0.2, 0.2, 0.4, 0.6, 0.8)){
+    y <- ts(numeric(100))
+    e <- rnorm(100)
+    for(j in 2:100){
+        y[j] <- i*y[j-1] + e[j]
+    }
+    plot1 <- autoplot(y) + xlab(i)
+    print(plot1)
+}
+```
+
+The value chosen for phi affects how volatile the series is. Negative values close to -1 force the series to oscillate across the mean nearly every observation, whereas positive values for phi close to 1 show much less volatility and are smoother overall.
+
+### Part C
+Write your own code to generate data from an MA(1) model with θ1 = 0.6 and σ2 = 1.
+
+```{r}
+set.seed(42)
+for (theta in c(-1, -0.6, -0.3, 0, 0.3, 0.6, 1)){
+  y <- ts(numeric(100))
+  e <- rnorm(100)
+  for(i in 2:100){
+    y[i] <- theta * e[i-1] + e[i]
+  }
+  print(autoplot(y) + xlab(theta))
+}
+```
+
+### Part D
+Produce a time plot for the series. How does the plot change as you change θ1?
+
+As theta approaches 1, the time series appears to resemble a random walk. However, as theta approaches -1, the time series oscillates rapidly across the mean with almost every step in the series.
+
+### Part E
+Generate data from an ARMA(1,1) model with ϕ1 = 0.6, 
+θ1 = 0.6 and σ2 = 1.
+
+```{r}
+phi <- 0.6
+theta <- 0.6
+y_arma <- ts(numeric(100))
+e <- rnorm(100)
+for(i in 2:100){
+  y_arma[i] <- phi * y_arma[i-1] + theta * e[i-1] + e[i]
+}
+```
+
+### Part F
+Generate data from an AR(2) model with ϕ1 = −0.8, ϕ2 = 0.3 and σ2 = 1. (Note that these parameters will give a non-stationary series.)
+
+```{r}
+phi1 <- -0.8
+phi2 <- 0.3
+y_ar <- ts(numeric(100))
+e <- rnorm(100)
+y_ar[2] <- y_ar[1] * phi1 + e[2]
+for(i in 3:100){
+  y_ar[i] <- phi1 * y_ar[i-1] + phi2 * y_ar[i-2] + e[i]
+}
+```
+
+### Part G
+Graph the latter two series and compare them.
+
+```{r}
+autoplot(y_arma) + xlab('ARMA Model')
+autoplot(y_ar) + xlab('AR 2 Model')
+```
+
+The time series are extremely different as the AR 2 model is divergent. This is because The phi1 parameter makes the series oscillate, but the phi2 parameter has a positive sign and increases the size of the oscillations. Since phi1 and phi2 add to greater than 1, the oscillations diverge rather than converge.This leads to a time series with ever increasing amplitudes rather than the stationary time series we observe with the ARMA model.
+
+# Question HA 8.8
+## Question
+
+Consider austa, the total international visitors to Australia (in millions) for the period 1980-2015.
+
+### Part A
+Use auto.arima() to find an appropriate ARIMA model. What model was selected. Check that the residuals look like white noise. Plot forecasts for the next 10 periods.
+
+```{r}
+arima_model <- auto.arima(austa)
+arima_model
+
+```
+
+Auto Arima has selected an ARIMA(0, 1, 1) with drift.
+
+```{r}
+checkresiduals(arima_model)
+autoplot(forecast(arima_model, h = 10))
+```
+
+The residuals appear to be vaguely normally distributed and pass the Ljung Box test with a p-value of .8.
+
+### Part B
+Plot forecasts from an ARIMA(0,1,1) model with no drift and compare these to part a. Remove the MA term and plot again.
+
+```{r}
+arima_no_drift <- Arima(austa, c(0, 1, 1), include.drift = F)
+autoplot(forecast(arima_no_drift), h = 10)
+
+arima_no_ma <- Arima(austa, c(0, 1, 0), include.drift = F)
+
+autoplot(forecast(arima_no_ma), h = 10)
+```
+
+Both the forecasts without drift fail to capture the trending nature of the previous data, providing constant forecasts rather than upward trending forecasts. 
+
+### Part C
+Plot forecasts from an ARIMA(2,1,3) model with drift. Remove the constant and see what happens.
+
+```{r}
+fit <- Arima(austa, c(2, 1, 3), include.drift = T)
+autoplot(forecast(fit, h = 10))
+
+fit_no_c <- Arima(austa, c(2,1,3), include.drift = T, include.constant = F, method = 'ML')
+autoplot(forecast(fit_no_c, h = 10))
+```
+
+The two models give somewhat similar forecasts, but the prediction interval for the model without a constant is much larger than the prediction interval for the model with a constant. The model with a constant also appears to be slightly damped compared to the model without a constant.
+
+### Part D
+Plot forecasts from an ARIMA(0,0,1) model with a constant. Remove the MA term and plot again.
+
+```{r}
+fit <- Arima(austa, c(0, 0, 1), include.constant = T)
+autoplot(forecast(fit, h = 10))
+
+fit_no_ma <- Arima(austa, c(0, 0, 0), include.constant = T)
+autoplot(forecast(fit_no_ma, h = 10))
+```
+
+The model with the MA term regresses to the mean after 1 timestep, the length of the MA term. The model with no MA term simply forecasts the mean value for all future timesteps. Neither of these models seem appropriate as they fail to capture the trending nature of the data.
+
+### Part E
+Plot forecasts from an ARIMA(0,2,1) model with no constant.
+
+```{r}
+fit <- Arima(austa, c(0, 2, 1), include.constant = F)
+autoplot(forecast(fit, h = 10))
+```
+
+This model appears to be a reasonable fit to the data, capturing the upward trend and without a huge prediction interval.
