Add ToC. May be too much.

--- a/Group1_HW_Set1.Rmd
+++ b/Group1_HW_Set1.Rmd
@@ -3,7 +3,10 @@ title: "CUNY DT 624---Summer 2020"
 subtitle: "Homework Set 1"
 author: "Group 1: Avraham Adler, Vishal Arora, Samuel Bellows, Austin Chan"
 date: "Summer 2020"
-output: word_document
+output:
+  word_document:
+    toc: true
+    toc_depth: 3
 ---
 
 ```{r setup, include=FALSE}
